/*
 * Copyright 2022 Deep Learning on Flink Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";


option java_outer_classname = "NodeServiceProtos";
option java_multiple_files = true;
option java_package = "org.flinkextended.flink.ml.proto";
import "node.proto";

service NodeService {

  rpc GetNodeSpec(NodeSpecRequest) returns(NodeSpecResponse);

  rpc NodeRestart(NodeRestartRequest) returns(NodeRestartResponse);

  rpc NodeStop(NodeStopRequest) returns(NodeStopResponse);

  rpc GetContext (ContextRequest) returns (ContextResponse);

  rpc GetFinishWorker(NodeSimpleRequest) returns (FinishWorkerResponse);

  rpc FinishJob(NodeSimpleRequest) returns (NodeSimpleResponse);

}